<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="?frame_background">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name_text_view_hint"
        android:singleLine="true"
        android:id="@+id/nameTextEdit"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:width="@dimen/initial_settings_text_view_width"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_medium"
        android:textColor="?textColor"
        android:textColorHint="?textColor"
        android:background="?background_color"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/doctor_name_text_view_hint"
        android:id="@+id/doctorNameTextEdit"
        android:layout_below="@+id/nameTextEdit"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_alignLeft="@id/nameTextEdit"
        android:layout_alignRight="@id/nameTextEdit"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_medium"
        android:textColor="?textColor"
        android:textColorHint="?textColor"
        android:background="?background_color"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nurse_name_text_view_hint"
        android:id="@+id/nurseNameTextEdit"
        android:layout_below="@+id/doctorNameTextEdit"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:layout_marginTop="40dp"
        android:layout_alignLeft="@id/nameTextEdit"
        android:layout_alignRight="@id/nameTextEdit"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_medium"
        android:textColor="?textColor"
        android:textColorHint="?textColor"
        android:background="?background_color"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email_text_view_hint"
        android:id="@+id/emailTextEdit"
        android:layout_below="@+id/nurseNameTextEdit"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:layout_marginTop="40dp"
        android:layout_alignLeft="@id/nameTextEdit"
        android:layout_alignRight="@id/nameTextEdit"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_medium"
        android:textColor="?textColor"
        android:textColorHint="?textColor"
        android:background="?background_color"
        />
</RelativeLayout>
