<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.karolskora.msorgranizer.activities.FirstInjectionTimeActivity">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/color_bg">

    <fragment
        class="com.karolskora.msorgranizer.fragments.FirstInjectionTimeFragment"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:layout="@layout/fragment_first_injection_time"
        android:id="@+id/firstInjectionTimeFragment"
        xmlns:tools="http://schemas.android.com/tools" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intial_settings_button_next_text"
        android:id="@+id/firstInjectionButtonNext"
        android:background="@drawable/button"
        android:width="200dp"
        android:textSize="@dimen/text_size_medium"
        android:layout_below="@id/firstInjectionTimeFragment"
        android:onClick="onButtonNextClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
</ScrollView>