...
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_marginTop="20dp"
            android:layout_height="265dp"
            android:background="@drawable/holo_light"
            android:layout_centerHorizontal="true"
            android:id="@+id/image_holo_light"
            android:layout_row="0"
            android:layout_column="0"/>
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="265dp"
            android:layout_marginTop="20dp"
...
