<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_height="wrap_content"
    tools:context=".fragments.LastInjectionDetailsFragment"
    android:background="?frame_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_injection_text"
        android:id="@+id/lastInjectionDetailsTextView"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginBottom="10dp"
        android:textColor="?textColor"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_below="@+id/lastInjectionDetailsTextView">
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/injection_date_text"
            android:id="@+id/injectionDateTextView"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="?textColor"/>
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/injection_point_text"
            android:id="@+id/injectionPointtextView"
            android:layout_row="0"
            android:layout_column="1"
            android:textColor="?textColor"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0">
            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/symptons_text"
                android:textColor="?textColor"/>
            <CheckBox
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/temperature_text"
                android:id="@+id/temperatureCheckBox"
                android:textSize="@dimen/text_size_medium"
                android:textColor="?textColor"/>
            <CheckBox
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/trembles_text"
                android:id="@+id/tremblesCheckBox"
                android:textSize="@dimen/text_size_medium"
                android:textColor="?textColor"/>
            <CheckBox
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/ache_text"
                android:id="@+id/acheCheckBox"
                android:textSize="@dimen/text_size_medium"
                android:textColor="?textColor"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_text"
            android:id="@+id/fragmentInjectionDetailsButton"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:background="@drawable/button"
            android:textSize="@dimen/text_size_medium"/>

        <ImageView
            android:id="@+id/glSurfaceView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowSpan="1"/>

    </GridLayout>

</RelativeLayout>
