...
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.karolskora.msorgranizer.fragments.ToInjectionFragment"
    android:background="?frame_background"
    android:id="@+id/fragment_to_injection">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/fragmentMainTextView"
...
        android:progressDrawable="@drawable/circular" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_inject_text"
        android:id="@+id/fragmentToInjectionButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/progressBar"
        android:background="@drawable/button"/>

    <TextView
...
